tests/snapshots/examples_fixtures/imports__except__import_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/except/import_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E012]: UNKNOWN MODULE MEMBER

Module `Lib` has no member named `drop`.

  --> examples/imports/except/import_except_error.flx:7:1
  |
7 | Lib.drop();
  | ^^^^^^^^

Hint:
  Check the module's public members or import the correct module.
== stdout ==
<not executed>
